--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h2>ときどききんぎょ</h2>
   <div class="java sparrow">
   <h3>しろぶんちょう</h3>
-  <img src="https://i.ibb.co/LNZqqPm/20210814-094048.jpg" alt="20210814-094048" border="0"></a><br /><a target='_blank' href='https://imgbb.com/'>free image hosting</img>
+  <img src="https://i.ibb.co/LNZqqPm/20210814-094048.jpg" alt="20210814-094048" border="0"></a><br />free image hosting</img>
   <p>しろぶんちょうの「モモ」ちゃんです。</p>
 </div>
 <video width="320" height="240" controls>
