--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h2>金原未桜です！</h2>
     <p>ボカロとかアニメとか好きです。</p>
     </div>
-    <img href="https://imgbb.com/"><img src="https://i.ibb.co/0czGhfx/beni.jpg" alt="beni" border="0"></img>
+    <img src="https://i.ibb.co/0czGhfx/beni.jpg" alt="beni" border="0"></img>
 </body>
 
 </html>
