--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
   <h2>ときどききんぎょ</h2>
   <div class="java sparrow">
   <h3>しろぶんちょう</h3>
-  <img src="https://i.ibb.co/LNZqqPm/20210814-094048.jpg" alt="白文鳥のももちゃん" title="しろぶんちょうの「モモ」ちゃんです。" align="left" border="0" width="80px" height="106.625px"></a><br /></img>
+  <img src="https://i.ibb.co/LNZqqPm/20210814-094048.jpg" alt="白文鳥のももちゃん" 
+  title="しろぶんちょうの「もも」ちゃんです。
+  扇風機の上がお気に入り。
+  びっくりして飛び上がったりする、
+  人間味のある鳥さんです。
+  チンゲン菜が大好き。爪切りは嫌い。" border="0" width="80px" height="106.625px"></a><br /></img>
   <p>
 
   </p>
 </div>
-
+  <h3>きんぎょ</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/l44n0bg5xbk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
