--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
   </p>
 </div>
   <h3>きんぎょ</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/l44n0bg5xbk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/l44n0bg5xbk" 
+title="きんぎょの「なつ」です。
+金魚すくいでとってから
+4年ほど生きています。
+推定１０cm。
+とっても食いしん坊です。
+" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
     
