--- a/index.html
+++ b/index.html
@@ -13,25 +13,18 @@
   <h2>ときどききんぎょ</h2>
   <div class="java sparrow">
   <h3>しろぶんちょう</h3>
-  <img src="https://i.ibb.co/LNZqqPm/20210814-094048.jpg" alt="白文鳥のももちゃん" 
-  title=" しろぶんちょうの「もも」ちゃんです。
+  <img src="https://i.ibb.co/LNZqqPm/20210814-094048.jpg" alt="白文鳥のももちゃん" title=" ももちゃん" border="0" width="213.3333333333333px" height="284.3333333333333px" align=left>しろぶんちょうの「もも」ちゃんです。
   扇風機の上がお気に入り。
   びっくりして飛び上がったりする、
   人間味のある鳥さんです。
-  チンゲン菜が大好き。爪切りは嫌い。" border="0" width="213.3333333333333px" height="284.3333333333333px"></a><br /></img>
- 
+  チンゲン菜が大好き。爪切りは嫌い。</a><br /></img>
+  
   <p>
 
   </p>
 </div>
   <h3>きんぎょ</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/l44n0bg5xbk" 
-title="きんぎょの「なつ」です。
-金魚すくいでとってから
-4年ほど生きています。
-推定１０cm。
-とっても食いしん坊です。
-" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/l44n0bg5xbk" title="youtube player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
     
