--- a/index.html
+++ b/index.html
@@ -21,19 +21,7 @@
   
 </div>
   
-
-
-
-
-
-
-
-
-
-
-
-
-<h3>きんぎょ</h3>
+<br clear="left"><h3>きんぎょ</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/l44n0bg5xbk" title="youtube player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
