--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <h2>ときどききんぎょ</h2>
   <div class="java sparrow">
   <h3>しろぶんちょう</h3>
-  <img src="https://i.ibb.co/LNZqqPm/20210814-094048.jpg" alt="白文鳥のももちゃん" title=" ももちゃん" border="0" width="213.3333333333333px" height="284.3333333333333px" align=left>しろぶんちょうの「もも」ちゃんです。
+  <img src="https://i.ibb.co/LNZqqPm/20210814-094048.jpg" alt="白文鳥のももちゃん" title=" ももちゃん" border="0" width="213.3333333333333px" height="284.3333333333333px" 
+  align=left>しろぶんちょうの「もも」ちゃんです。
   扇風機の上がお気に入り。
   びっくりして飛び上がったりする、
   人間味のある鳥さんです。
