--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <div class="java sparrow">
   <h3>しろぶんちょう</h3>
   <img src="https://i.ibb.co/LNZqqPm/20210814-094048.jpg" alt="白文鳥のももちゃん" title=" ももちゃん" border="0" width="213.3333333333333px" height="284.3333333333333px" 
-  align=left>しろぶんちょうの「もも」ちゃんです。
+  align=left>
+  しろぶんちょうの「もも」ちゃんです。
   
   扇風機の上がお気に入り。
   
@@ -28,6 +29,11 @@
   
 <br clear="left"><h3>きんぎょ</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/l44n0bg5xbk" title="youtube player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+きんぎょの「なつ」です。
+金魚すくいでとってから
+4年ほど生きています。
+推定１０cm。
+とっても食いしん坊です。
 
 
     
