--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   
 <br clear="left"><h3>きんぎょ</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/l44n0bg5xbk" title="youtube player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-きんぎょの「なつ」です。
+<p>きんぎょの「なつ」です。
 金魚すくいでとってから
 4年ほど生きています。
 推定１０cm。
-とっても食いしん坊です。
+とっても食いしん坊です。</p>
 
 
     
