--- a/index.html
+++ b/index.html
@@ -13,21 +13,16 @@
   <h2>ときどききんぎょ</h2>
   <div class="java sparrow">
   <h3>しろぶんちょう</h3>
-  <img src="https://i.ibb.co/LNZqqPm/20210814-094048.jpg" alt="白文鳥のももちゃん" title=" ももちゃん" border="0" width="213.3333333333333px" height="284.3333333333333px" 
-  align=left>
+  <img src="https://i.ibb.co/LNZqqPm/20210814-094048.jpg" alt="白文鳥のももちゃん" title=" ももちゃん" border="0" width="213.3333333333333px" height="284.3333333333333px">
   しろぶんちょうの「もも」ちゃんです。
-  
   扇風機の上がお気に入り。
-  
   びっくりして飛び上がったりする、
-  
   人間味のある鳥さんです。
-  
   チンゲン菜が大好き。爪切りは嫌い。</a><br /></img>
   
 </div>
   
-<br clear="left"><h3>きんぎょ</h3>
+<h3>きんぎょ</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/l44n0bg5xbk" title="youtube player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>きんぎょの「なつ」です。
 金魚すくいでとってから
